# chip8-emu

./: README.md  meson.build
include/: allocator.h  argv.h  chip.h  config.h  rand.h  rom.h  typedefs.h  util.h  vm.h
src/: allocator.c  argv.c  chip.c  main.c  rand.c  rom.c  util.c  vm.c
test/: cls.rom
